feat (backend): get env variables
