# backend/docs/swagger.json
@@ -174,6 +174,44 @@
             }
         },
         "/api/projects/envs/{projectId}": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Env"
+                ],
+                "summary": "Get Environmental Variables",
+                "operationId": "get-env-variables",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "project id",
+                        "name": "projectId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/project.EnvVariable"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -213,7 +251,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/project.GenericProjectResp"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/project.EnvVariable"
+                            }
                         }
                     }
                 }
@@ -378,9 +419,6 @@
         "envs.OverwriteEnvVariablesReq": {
             "type": "object",
             "properties": {
-                "projectID": {
-                    "type": "string"
-                },
                 "variables": {
                     "type": "array",
                     "items": {
@@ -405,6 +443,20 @@
                 "Done",
                 "None"
             ]
+        },
+        "project.EnvVariable": {
+            "type": "object",
+            "properties": {
+                "key": {
+                    "type": "string"
+                },
+                "projectID": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
         },
         "project.GenericProjectResp": {
             "type": "object",
